--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         name="rows"
         id="rows"
         placeholder="enter number of rows"
-      /> -->
-      <!-- <input
+      />
+      <input
         type="number"
         name="mines"
         id="mines"
         placeholder="enter number of mines"
-      /> -->
+      />
+      <button id="button">Generate Grid</button> -->
       <div id="gameArea"></div>
     </main>
     <script src="main.js"></script>
