added min value

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           id="size"
           placeholder="enter size of grid"
           value="15"
+          min="1"
         />
       </label>
       <label for="mines"
@@ -28,6 +29,7 @@
           id="mines"
           placeholder="enter number of mines"
           value="30"
+          min="0"
         />
       </label>
       <button id="button">Generate Grid</button>
