--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       <button id="button">Generate Grid</button>
       <div id="gameArea"></div>
     </main>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
