rows and columns

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
   <body>
     <h1>Minesweeper</h1>
     <main>
-      <label for="size"
-        >Size
-        <input
-          type="number"
-          name="size"
-          id="size"
-          placeholder="enter size of grid"
-          value="15"
-          min="1"
-        />
+      <label for="rows">
+        Rows
+        <input type="number" name="rows" id="rows" value="15" min="1" />
+      </label>
+      <label for="columns">
+        Columns
+        <input type="number" name="columns" id="columns" value="15" min="1" />
       </label>
       <label for="mines"
         >Mines
