--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Minesweeper</title>
   </head>
   <body>
-    <h1>Minesweeper</h1>
     <main>
-      <label for="rows">
-        Rows
-        <input type="number" name="rows" id="rows" value="15" min="1" />
-      </label>
-      <label for="columns">
-        Columns
-        <input type="number" name="columns" id="columns" value="15" min="1" />
-      </label>
-      <label for="mines"
-        >Mines
-        <input
-          type="number"
-          name="mines"
-          id="mines"
-          placeholder="enter number of mines"
-          value="30"
-          min="0"
-        />
-      </label>
-      <button id="button">Generate Grid</button>
-      <div id="gameArea"></div>
+      <div>
+        <section>
+          <div>
+            <h1>Minesweeper</h1>
+            <div class="input">
+              <label for="rows">
+                Rows:
+                <input type="number" name="rows" id="rows" value="15" min="1" />
+              </label>
+              <label for="columns">
+                Columns:
+                <input
+                  type="number"
+                  name="columns"
+                  id="columns"
+                  value="15"
+                  min="1"
+                />
+              </label>
+              <label for="mines"
+                >Mines:
+                <input
+                  type="number"
+                  name="mines"
+                  id="mines"
+                  placeholder="enter number of mines"
+                  value="30"
+                  min="0"
+                />
+              </label>
+            </div>
+            <button id="button">Generate Grid</button>
+          </div>
+        </section>
+        <div id="gameArea"></div>
+      </div>
     </main>
     <script src="./main.js"></script>
   </body>
