--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="logo192.png" type="image/png" />
+    <link rel="shortcut icon" href="logo192.png" type="image/image/png" />
+
     <title>Minesweeper</title>
   </head>
   <body>
